      hardening-includes.
    + [JW] Remove the hardening-no-stackprotector tag.
  * checks/control-file.{desc,pm}:
    + [JW] Add references to tags related to build profiles.
    + [JW] Relax Build-Profiles syntax check to allow (almost) any
      characters in profile names.  Thanks to Ximin Luo for the bug report.
      (Closes: #839086)
  * checks/debhelper.pm:
    + [JW] Ignore comments in debian/rules.
    + [JW] Fix parsing rule targets in lines containing multiple colons.
      Thanks to Andreas Beckmann for the bug report.  (Closes: #838246)
    + [CL] Check for .maintscript files that include
      "maint-script-parameters".  (Closes: #838195)
  * checks/fields.desc:
    + [JW] Fix typo.
    + [JW] Add references to tags related to build profiles.
  * checks/testsuite.pm:
    + [JW] Apply patch from Sean Whitton to recognise autopkgtest-pkg-elpa
      as a valid value for the Testsuite field.  (Closes: #837801)

  * collection/hardening-info:
    + [NT] Removed.

  * data/fields/obsolete-packages:
    + [NT] Apply patch from Otto Kekäläinen to assist with the transition
      to the "default-mysql-*" packages.  (Closes: #838603)
  * data/files/js-libraries:
    + [BR] Apply patch from Jean-Michel Vourgère to add detection of
      libjs-jquery-migrate-1.  (Closes: #823627)
  * data/files/php-libraries:
    + [JW] Apply patch from Marcelo Jorge Vieira to update package name
      for php-gettext.  (Closes: #837502)
  * data/spelling/corrections:
    + [JW, PW] Add more corrections.

  * debian/control:
    + [NT] Drop dependencies on hardening-includes as we no longer need
      hardening-check.
  * debian/copyright:
    + [JW] Add Paul Wise.
    + [JW] Remove now-unneeded separate entry for spellintian.t.
    + [JW] Update copyright years.
    + [CL] Add Chris Lamb.

  * helpers/coll/hardening-info-helper:
    + [NT] Removed.
  * helpers/coll/objdump-info-helper:
    + [NT] Expose a few more bits from readelf needed to implement some