@@ -249,8 +249,19 @@ Tag: invalid-profile-name-in-build-profiles-field
 Severity: important
 Certainty: possible
 Info: The restriction formula in Build-Profiles field includes an unknown build
- profile. The only allowed build profiles are "stage1", "stage2", "nocheck",
- "nodoc", "nobiarch" and "cross".
+ profile. The only allowed build profiles are
+ "cross",
+ "nobiarch",
+ "nocheck",
+ "nodoc",
+ "nogolang",
+ "nojava",
+ "noperl",
+ "nopython",
+ "noudeb",
+ "stage1",
+ "stage2"
+ and "pkg.<i>srcpkg</i>.<i>anything</i>".
 Ref: https://wiki.debian.org/BuildProfileSpec#Registered_profile_names
 
 Tag: multiline-architecture-field
