@@ -2,5 +2,10 @@ cross
 nobiarch
 nocheck
 nodoc
+nogolang
+nojava
+noperl
+nopython
+noudeb
 stage1
 stage2
