@@ -4,7 +4,8 @@ Section: devel
 Maintainer: {$author}
 Standards-Version: {$standards_version}
 Build-Depends: {$build_depends},
- big <stage1>, bpfail1 <foobar>, bpcomplicated <stage1 nocheck> <cross>
+ big <stage1>, bpfail1 <foobar>,
+ bpcomplicated <stage1 nocheck> <cross> <!pkg.{$source}.foo>
 
 Package: {$source}-wrong-syntax
 Architecture: {$architecture}
@@ -21,7 +22,7 @@ Description: {$description} (wrong syntax)
 Package: {$source}-unknown-profile
 Architecture: {$architecture}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
-Build-Profiles: <!stage1 !nocheck> <!unknown>
+Build-Profiles: <!stage1 !nocheck> <!unknown> <pkg.{$source}.foo>
 Description: {$description} (unknown profile)
  Check for unknown profile names
  .
